--- a/WorkingWithCollectionView/View/MainPage.xaml
+++ b/WorkingWithCollectionView/View/MainPage.xaml
@@ -1,13 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
-    x:Class="WorkingWithCollectionView.MainPage"
+    x:Class="WorkingWithCollectionView.View.MainPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:Models="clr-namespace:BindingToObject.Models"
-    xmlns:ViewModel="View"
-    xmlns:this="clr-namespace:WorkingWithCollectionView"
-    x:DataType="this:MainPage">
-
+    xmlns:ViewModel="clr-namespace:WorkingWithCollectionView.ViewModel"
+    x:DataType="ViewModel:MainPageViewModel"
+   >
 
     <VerticalStackLayout BindingContext="{Binding Student}">
 
